ecmascript/parser/tests/typescript-errors/deno-10112/case1/input.ts.stderr
error: Expected a semicolon
 --> $DIR/tests/typescript-errors/deno-10112/case1/input.ts:3:1
  |
3 | }
  | ^

